# TRIDENT-2021

./: .gitignore  .gitmodules  Athena .pod  README.md  gps.txt  vision installation instructions
GIMME2 UDP/: CMakeLists.txt  main.cpp
Trilateration/Electronics/: 00_Full_Pinger_Circuit_Final.asc
Trilateration/TDOA_MCU/TDOA/.metadata/: .log4j.xml  version.ini
Trilateration/TDOA_MCU/TDOA/TDOA/: .cproject  .mxproject  .project  TDOA Debug.launch  TDOA.ioc
code_experiments/: start_simulation_env.bash  start_trident_teleop.bash
code_experiments/experiment_ws/install/: local_setup.sh  setup.sh
code_experiments/experiment_ws/log/: latest_build
code_experiments/experiment_ws/src/: trident_msgs
code_experiments/experiment_ws/src/faux_sensor_n_unit/: package.xml  setup.cfg  setup.py
code_experiments/experiment_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
code_experiments/experiment_ws/src/log/: latest_build
code_experiments/experiment_ws/src/motor_control/: setup.py
code_experiments/experiment_ws/src/test_interfaces/: CMakeLists.txt
code_experiments/motor_control_pid/: main.py  pid.py  pid_utils.py
opticalFlowPython/: .gitignore  evaluation.py  opticalFlow.py  opticalFlowResult.csv  opticalFlowResult_simulated.txt  tinyquaternion.py
optical_flow_test/: .gitignore  CMakeLists.txt  opticalFlowMain.cpp
py-hello/: .gitignore  evaluation.py  hello.py  histeq.py  opticalFlowResult.csv  opticalFlowResult.txt
trident_hardware/Athena/Athena_PDB/: Athena_PDB-cache.lib  Athena_PDB.sch  Fuse holder.lib  PROFET_Diode.sch  Peripheral_Enabling.sch  Relay_Trident.lib  sym-lib-table
trident_hardware/Naiad/Power Board V0.2/: Camera_Enabling.ms14  Connectors.ms14  Fuse_Diode_Cap_Protection.ms14  Fuse_Diode_Cap_Protection.ms14 (Security copy)  Killswitch.ms14  LennieNaiadPwrBrd_V0.1.ewprj  Motor_Connectors.ms14  NaiadPwrBoard_V0.1 instructions.txt  Naiad_PDB_V0.2.ms14  Naiad_PDB_V0.2.ms14 (Security copy)  PROFET_Diode.ms14  PRO_Diode.ms14  PRO_Diode.ms14 (Security copy)  Peripheral_Enabling.ms14  Peripheral_Enabling.ms14 (Security copy)  SMD_Fuse_Holder.ms14  SMD_Fuse_Holder.ms14 (Security copy)  XT60_Connectors.ms14  XT60_Connectors.ms14 (Security copy)
trident_software/: README.md
trident_software/athena_ws/install/: local_setup.sh  local_setup.sh.orig  setup.bash  setup.bash.orig  setup.ps1  setup.ps1.orig  setup.sh  setup.sh.orig  setup.zsh  setup.zsh.orig
trident_software/athena_ws/log/: latest_build
trident_software/athena_ws/src/athena/: setup.cfg  setup.py
trident_software/athena_ws/src/athena_bringup/: package.xml  setup.cfg  setup.py
trident_software/athena_ws/src/athena_bringup/config/: ps3.config.yaml  system_launch_params.yaml
trident_software/athena_ws/src/athena_bringup/launch/: sim.position.launch.py  sim.system.launch.py  system.launch.py  teleop.launch.py  teleop_joy.launch.py
trident_software/athena_ws/src/athena_driver/: package.xml  setup.cfg  setup.py
trident_software/athena_ws/src/athena_guidance_system/: setup.cfg  setup.py
trident_software/baseclasses/: .positionbase.py.swp  missioncontrolbase.py  motorcontrolbase.py  motordriverbase.py  navigationbase.py  pidtuner.py  positionbase.py  sensorbase.py  tridentstates.py
trident_software/ground_control/: README.md  build_run.sh  start_gc.sh  start_server.sh  start_tester.sh
trident_software/ground_control/gui/: index.html  loggerWindow.html
trident_software/ground_control/gui_backend_ws/: index.js  listener.js  package-lock.json  package.json  tester.js  tridentstates.js
trident_software/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
trident_software/log/: latest_build
trident_software/msgs_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
trident_software/msgs_ws/log/: latest_build
trident_software/msgs_ws/src/cola2_msgs/: CMakeLists.txt  package.xml
trident_software/msgs_ws/src/trident_msgs/: CMakeLists.txt  package.xml
trident_software/msgs_ws/src/trident_msgs/action/: GotoPose.action  HoldPose.action  StartMission.action
trident_software/msgs_ws/src/trident_msgs/msg/: MotorOutput.msg  MotorOutputs.msg  PidParam.msg  State.msg  Waypoint.msg  WaypointAction.msg
trident_software/msgs_ws/src/trident_msgs/srv/: BasicSensorService.srv  GetState.srv  KalmanSensorService.srv  LoadMissionPlan.srv  ToggleControl.srv
trident_software/naiad_ws/src/naiad_pressure_sensor/: CMakeLists.txt  package.xml
trident_software/naiad_ws/src/naiad_pressure_sensor/include/naiad_pressure_sensor/: i2cdepth.h
trident_software/naiad_ws/src/naiad_pressure_sensor/src/: i2cdepth.c
trident_software/openvslam_ws/: script_run.sh
trident_software/openvslam_ws/src/openvslam/: CMakeLists.txt  README.md  package.xml  scriptbuild
trident_software/openvslam_ws/src/openvslam/src/: CMakeLists.txt  run_real_slam.cc
trident_software/openvslam_ws/src/openvslam/viewer/: package-lock.json
trident_software/testing/: README.md
trident_software/testing/integration_tests/: start_all.sh  start_sim_athena.sh  start_sim_naiad.sh
trident_software/testing/unit_tests/: athena_activate_motors.launch.py  athena_guidance_system_test.launch.py  athena_mission_control_test.launch.py  start_all.sh
trident_software/vision_ws/: script_run.sh
trident_software/vision_ws/src/openvslam/: CMakeLists.txt  README.md  package.xml  scriptbuild
trident_software/vision_ws/src/openvslam/config/: config.yaml
trident_software/vision_ws/src/openvslam/src/optflow/: run_optflow.cc
trident_software/vision_ws/src/openvslam/src/slam/: run_real_slam.cc
vslam/: .gitignore  instructions for evaluation.txt  opencv installation instructions
vslam/KITTI/dataset/: main.py
vslam/old_naiad/: config.yaml  main.py  map.msg--frame-skip  plot_trajectories.py  run_video_localization  run_video_slam
vslam/old_naiad/pt1_2_gray_result/: frame_trajectory.txt  keyframe_trajectory.txt  track_times.txt
vslam/old_naiad/pt1_2_pre_result/: frame_trajectory.txt  keyframe_trajectory.txt  track_times.txt
vslam/openvslam/: Installation notes.txt
(+919 files in other folders)
