<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>athena_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="johannes@todo.todo">johannes</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>athena_motor_control</exec_depend>
  <exec_depend>athena_navigation</exec_depend>
  <exec_depend>athena_mission_control</exec_depend>
  <exec_depend>athena_guidance_system</exec_depend>
  <exec_depend>athena_driver</exec_depend>
  <!-- The msgs_ws needs to be sourced before building in order to import the custom interface -->
  <depend>trident_msgs</depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
